== master

== 0.1.2 / 2009-07-11

* Added 'is_not' and 'is' for custom method definitions
* Refactored MethodDefinitionDSL
* Added EnumeratedAttribute::MethodDefinition 

== 0.1.1 / 2009-07-09

* Added enum_attr_reader and enum_attr_writer
* Added option :nil=>true to allow attributes set to nil
* Added #{attr_name}_nil? method for testing nil case

== 0.1.0 / 2009-07-08

* Added dynamic predicate method generation
* Added options handling
* Added incrementor and decrementor
* Added enumeration accessor
* Added accessor and enumeration value definition
* Added simple attribute initialization
* Added DSL for short-hand method definition