@@ -2,11 +2,11 @@
 
 Gem::Specification.new do |s|
   s.name = %q{enumerated_attribute}
-  s.version = "0.1.1"
+  s.version = "0.1.2"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Jeff Patmon"]
-  s.date = %q{2009-07-10}
+  s.date = %q{2009-07-11}
   s.description = %q{A enumerated attribute accessor}
   s.email = %q{jpatmon@yahoo.com}
   s.files = ["lib/enumerated_attribute.rb", "spec/car.rb", "spec/car_spec.rb", "spec/tractor.rb", "spec/tractor_spec.rb", "CHANGELOG.rdoc", "init.rb", "LICENSE", "Rakefile", "README.rdoc", ".gitignore"]
